hphp/hack/test/typecheck/inout/bad_inout_hint_return5.php.exp
File "bad_inout_hint_return5.php", line 4, characters 10-55:
Invalid return type (Typing[4110])
File "bad_inout_hint_return5.php", line 3, characters 33-35:
This is an int
File "bad_inout_hint_return5.php", line 4, characters 25-30:
It is incompatible with a string
